<resources>
    <string name="app_name">Baubuddy</string>
    <string name="baubuddy">Baubuddy</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="user">365</string>
    <string name="pass">1</string>
    <string name="task">Task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="scan">Qr Scan</string>
    <string name="search">Search</string>
    <string name="title_home">Home</string>
    <string name="title_login">Login</string>
    <string name="search_hint">Search e.g. \\\'query+able=true\\\'\n</string>
    <string name="color_code_label">Color Code: %1$s</string>
</resources>